[package]
name = "libc-fuzzer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
which = "4.2.5"
cc = "1.0.73"

[dependencies]
libafl = { version = "0.7.1", features = [
    "std",
    "derive",
    "introspection",
    "fork",
] }
libafl_cc = "0.7.1"
libafl_targets = { version = "*", features = [
    "libfuzzer",
    "sancov_pcguard_hitcounts",
] }
tree-sitter = "0.20.6"
clap = { verison = "*", features = ["derive"] }
log = "0.4.16"
env_logger = "0.9.0"
rust-embed = "6.4.0"
which = "4.2.5"
cc = "1.0.73"
